istio/gateway/istio-ingress-http-only.yaml
# ga dipake gateway yang ini
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingressgateway-http-only
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
  servers:
  # http gateway
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
